# xarray-hdf

./: README.rst  Taskfile.yml  setup.cfg  tasks.py
pkg/: meta.yaml
src/xarrayhdf/: __init__.py
test/: test_xarrayhdf.py
