[metadata]
name = PROJECT_NAME
version = file: src/package/__version__
author = Peter Talley
author_email = peterctalley@gmail.com
description = PROJECT_DESC
long_description = file: README.rst
long_description_content_type = text/x-rst
url = PROJECT_URL
license = MIT

[options]
python_requires = >=3.7
install_requires =
    # Dependencies
package_dir =
    =src
packages =
    PACKAGE
    PACKAGE.SUBPACKAGE

[options.package_data]
PACKAGE =
    __version__
