[metadata]
name = xarray-hdf
version = file: src/xarrayhdf/__version__
author = Peter Talley
author_email = peterctalley@gmail.com
description = Store xarray Datasets using PyTables, with support for attributes.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/otaithleigh/xarray-hdf
license = MIT

[options]
python_requires = >=3.7
install_requires =
    h5py
    pandas
    tables
    xarray
package_dir =
    =src
packages =
    xarrayhdf

[options.package_data]
xarrayhdf =
    __version__
